--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "afams-portfolio",
+  "name": "afam-portfolio",
   "version": "1.0.0",
   "private": true,
-  "description": "afams-portfolio",
+  "description": "afam's-portfolio",
   "keywords": [
     "gatsby"
   ],
@@ -15,8 +15,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "framer-motion": "^11.2.6",
     "gatsby": "^5.13.5",
-    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
